@@ -1,3 +1,4 @@
+2021. 3.31. Modified makefile to separately make and install library and applications. [makefile]
 2019.11.22. Rewrote README as a markdown file. [README]
 2019.10. 1. Enabled make uninstall. [makefile]
 2019. 8. 8. Reflected renaming of zNameDestroy to zNameFree. [liw_dl]
